@@ -13,6 +13,8 @@ Current git version
   * Do not draw frame background behind clients (so for semi-transparent
     client decorations, one does not see the frame decoration behind but the
     wallpaper instead)
+  * The frame attributes ('selection', 'algorithm', 'fraction', 'split_type')
+    are now writable.
   * The setting +monitors_locked+ is now explicitly an unsigned integer.
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
